--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Fira code', Helvetica, sans-serif;
+  @apply text-white;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.header_text {
+  @apply text-primary-gray text-base;
+}
+
+.nav_selected > a {
+  @apply text-white;
+}
+
+.nav_style > li {
+  @apply border border-line-color px-5 flex items-center;
+}
+
+.nav_style > li.nav_selected {
+  @apply border border-b-accent-orange;
+}
+
+.label-style {
+  @apply flex items-center gap-2 text-primary-gray;
+}
+
+.h-calc-screen {
+  height: calc(100vh - 56px);
 }
